Remove unused variable and replace ImmutableList.of with List.of